NXP-28010: build platform branch on pipeline